fixtures/vyper/simple/overflow/positive/i32.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "2147483647"
#!           ],
#!           "caller": "0x2bDaBE628Bc473529ef1562835F3c7490F3b70e5"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int32) -> int32:
    return witness + 1
