fixtures/vyper/simple/overflow/negative/i32.vy
#! {
#!   "modes": [
#!     "V >=0.4.0"
#!   ],
#!   "cases": [
#!     {
#!       "name": "default",
#!       "inputs": [
#!         {
#!           "method": "main",
#!           "calldata": [
#!             "-2147483648"
#!           ],
#!           "caller": "0xB84E308fa978f68A3400d6721c39cECbB6c670A8"
#!         }
#!       ],
#!       "expected": {
#!         "return_data": [],
#!         "exception": true
#!       }
#!     }
#!   ]
#! }

@external
@pure
def main(witness: int32) -> int32:
    return witness - 1
